style: auto-format code [skip ci]